# cpp_backtester

./: .gitignore  CMakeLists.txt  QuoteGenerator.cpp  QuoteGenerator.h  README.md  StockQuote.cpp  StockQuote.h  main.cpp
Indicators/: ExponentialMovingAverage.cpp  ExponentialMovingAverage.h  IIndicator.h  SimpleMovingAverage.cpp  SimpleMovingAverage.h
Strategies/: EMASupportStrategy.cpp  EMASupportStrategy.h  IStrategy.h  SMASupportStrategy.cpp  SMASupportStrategy.h
Trade/: BuyAndHold.cpp  BuyAndHold.h  ITrade.h  IndicatorBasedTrade.cpp  IndicatorBasedTrade.h
